--- a/ParticleSim.html
+++ b/ParticleSim.html
@@ -7,8 +7,17 @@
 		</style>
 	</head>
 	<body>
-        <script src="three/three.js"></script>
-        <script src="three/OrbitControls.js"></script>
-		<script src ="main.js"></script>
+        <div id="main">
+            <script src="three/three.js"></script>
+            <script src="three/OrbitControls.js"></script>
+            <script src ="main.js"></script>
+        </div>
+        <div id = "hud">
+
+            <p id = "info">Information:
+
+            </p>
+
+        </div>
 	</body>
 </html>
