--- a/ParticleSim.html
+++ b/ParticleSim.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<title>Gas Law Particle Simulation</title>
+        <title>Gas Law Particle Simulation</title>
+        <link rel="icon" href="icon.ico">
 		<style>
 			body { margin: 0; }
 			canvas { display: block; }
