--- a/ParticleSim.html
+++ b/ParticleSim.html
@@ -18,13 +18,20 @@
             <button id= "DV" onmousedown="decreaseVolume()">Decrease Volume</button>
             <button id = "IT" onmousedown="increaseTemperature()">Increase Temperature</button>
             <button id = "DT" onmousedown="decreaseTemperature()">Decrease Temperature</button>
-
+            <button id = "AP" onmousedown="_addParticles()">Add Particles</button>
+            <button id = "CP" onmousedown="_clear()">     Reset     </button>
 
         </div>
         <div id="main">
             <script src="three/three.js"></script>
             <script src="three/OrbitControls.js"></script>
             <script src ="main.js"></script>
+        </div>
+
+        <div id = "foot">
+            <p style="z-index: 265;position:absolute;color:aliceblue;top:95%;left:90%">
+                By Philo Kaulkin
+            </p>
         </div>
 
 	</body>
