Made buttons more smooth

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 
             <p id = "info" style="z-index: 265;position:absolute;color:aliceblue">Information:
             </p>
-            <button id="IV" onmousedown="increaseVoume()">Increase Volume</button>
-            <button id= "DV" onmousedown="decreaseVolume()">Decrease Volume</button>
-            <button id = "IT" onmousedown="increaseTemperature()">Increase Temperature</button>
-            <button id = "DT" onmousedown="decreaseTemperature()">Decrease Temperature</button>
-            <button id = "AP" onmousedown="_addParticles()">Add Particles</button>
+            <button id="IV" onmousedown="IVMD()" onmouseup="IVMU()">Increase Volume</button>
+            <button id= "DV" onmousedown="DVMD()" onmouseup="DVMU()">Decrease Volume</button>
+            <button id = "IT" onmousedown="ITMD()" onmouseup="ITMU()">Increase Temperature</button>
+            <button id = "DT" onmousedown="DTMD()" onmouseup="DTMU()">Decrease Temperature</button>
+            <button id = "AP" onmousedown="APMD()" onmouseup="APMU()">Add Particles</button>
             <button id = "CP" onmousedown="_clear()">     Reset     </button>
 
+        </div>
+        <div id = "consts">
+            
         </div>
         <div id="main">
             <script src="three/three.js"></script>
