--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 
             <p id = "info" style="z-index: 265;position:absolute;color:aliceblue">Information:
             </p>
+            <button id = "TG" onclick="TG()">Toggle Grid</button>
+
             <button id="IV" onmousedown="IVMD()" onmouseup="IVMU()">Increase Volume</button>
             <button id= "DV" onmousedown="DVMD()" onmouseup="DVMU()">Decrease Volume</button>
             <button id = "IT" onmousedown="ITMD()" onmouseup="ITMU()">Increase Temperature</button>
             <button id = "DT" onmousedown="DTMD()" onmouseup="DTMU()">Decrease Temperature</button>
             <button id = "AP" onmousedown="APMD()" onmouseup="APMU()">Add Particles</button>
             <button id = "CP" onmousedown="_clear()">     Reset     </button>
+
+            
 
         </div>
         <div id = "consts">
