--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id = "DT" onmousedown="DTMD()" onmouseup="DTMU()"class="button">Decrease Temperature</button>
             <button id = "AP" onmousedown="APMD()" onmouseup="APMU()"class="button">Add Particles</button>
             <button id = "CP" onmousedown="_clear()" class="button">     Reset     </button>
-
+            <button id = "RP" onmousedown="RPMD()" onmouseup="RPMU()" class="button">Remove Particles</button>
             
             
 
