--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div id="main">
             <script src="three/three.js"></script>
             <script src="three/OrbitControls.js"></script>
+            <script src="math/exact-math-dist.js"></script>
             <script src ="main.js"></script>
         </div>
         
